Repair mobile nav inside overflowing container.

--- a/assets/css/x.dev/x-quarantine.css
+++ b/assets/css/x.dev/x-quarantine.css
@@ -19,8 +19,9 @@ hr {
 
 body {
 	display: grid;
-	grid-template-columns: [full-start] 1fr [main-start] minmax(0, 120ch) [main-end] 1fr [full-end];
+	grid-template-columns: [full-start] 1fr [main-start header-start] minmax(0, min-content) [header-end nav-start] minmax(0, 120ch) [nav-end main-end] 1fr [full-end];
 	column-gap: var(--SpacingRow);
+	align-items: baseline;
 
 	&>*, main>header {
 		grid-column: full;
@@ -41,6 +42,7 @@ body {
 	font-weight: 800;
 	flex: max-content 0 0;
 	font-family: var(--Grotesk);
+	white-space: nowrap;
 
 	&.grande {
 		--ScaleLevel: var(--Tall);
@@ -53,31 +55,43 @@ body {
 }
 
 
-body>header {
-	--Color: oklch(98% 6% 88deg);
+body>div {
+
+	/* align-items: center; */
+	/* gap: 40px; */
+	&>header {
+		grid-column: header;
+	}
+
+	&>nav {
+		grid-column: nav;
+	}
+
+	@media (orientation: portrait) {
+		display: contents;
+
+		&>:is(main, nav) {
+			grid-column: full;
+		}
+	}
 
 	background-color: oklch(45% 39% 274deg);
+
+}
+
+
+[id=entete-principal] {
+	--Color: oklch(98% 6% 88deg);
 	font-family: var(--Grotesk);
 
 	& h1 {
 		--ScaleLevel: var(--Short);
 	}
 
-	&>div {
-		align-items: center;
-		gap: 40px;
-	}
-
 	@media (orientation: portrait) {
-		&, &>div {
-			display: contents;
-		}
-
-		h1 {
-			padding: var(--SpacingThinner) var(--SpacingRow);
-			background-color: oklch(45% 39% 274deg);
-			grid-column: full;
-		}
+		padding: var(--SpacingThinner) var(--SpacingRow);
+		background-color: oklch(45% 39% 274deg);
+		grid-column: full;
 	}
 }
 
@@ -164,25 +178,38 @@ h3>i {
 
 
 [id=navigation-principale] {
-	display: flex;
-	align-items: baseline;
 	z-index: 1;
+	font-family: var(--Grotesk);
 
 	@media (orientation: portrait) {
 		order: 1;
-		scrollbar-width: none;
+		position: sticky;
+		bottom: 0;
 		grid-column: full;
 		background-color: oklch(45% 39% 274deg);
 		border-top: 2px solid oklch(55% 39% 274deg);
-		overflow-x: auto;
-		position: sticky;
-		bottom: 0;
+
+		&>div {
+			overflow-x: auto;
+		}
 	}
 
-	&>* {
-		flex-shrink: 0;
-	}
+	&>div {
+		scrollbar-width: none;
+		display: flex;
+		align-items: baseline;
+		flex-wrap: nowrap;
 
+		&>* {
+			flex-shrink: 0;
+			flex-grow: 0;
+			flex-basis: auto;
+		}
+
+		&>:is(div, a) {
+			padding: var(--SpacingThin);
+		}
+	}
 	& :is(a, h4) {
 		padding: var(--SpacingThinnest);
 		margin: 0;
@@ -204,10 +231,6 @@ h3>i {
 	& :is(h3, h4) {
 		color: oklch(75% 39% 274deg);
 		/* font-weight: 600; */
-	}
-
-	&>:is(div, a) {
-		padding: var(--SpacingThin);
 	}
 
 	&:has(>div:hover)>div:not(:hover) {
